bug 388583 â€“ Autocomplete dropdown doesn't update when scrolling with scrollbar, commit to SeaMonkey 1.1.3 minibranch to fix regression on Mac for this release